--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -71,6 +71,8 @@
                             <option value="TODO">TODO</option>
                             <option value="In Progress">In Progress</option>
                             <option value="In Review">In Review</option>
+                            <option value="Review failed - In Progress">Review failed - In Progress</option>
+                            <option value="On-Hold">On-Hold</option>
                             <option value="Published">Published</option>
                         </select>
                     </div>
@@ -212,6 +214,8 @@
                             <option value="TODO">TODO</option>
                             <option value="In Progress">In Progress</option>
                             <option value="In Review">In Review</option>
+                            <option value="Review failed - In Progress">Review failed - In Progress</option>
+                            <option value="On-Hold">On-Hold</option>
                             <option value="Published">Published</option>
                         </select>
                     </div>
